[gd_scene load_steps=8 format=3 uid="uid://df6sgaa02ae60"]

[ext_resource type="Script" path="res://src/templates/characters/enemy_template.gd" id="1_n7tus"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8b82t"]
size = Vector2(20, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y1al6"]
size = Vector2(20, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dfvyj"]
size = Vector2(70, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bl10x"]
size = Vector2(70, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_li7yr"]
size = Vector2(90, 50)

[sub_resource type="SpriteFrames" id="SpriteFrames_mbqbr"]
animations = [{
"frames": [],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[node name="EnemyTemplate" type="CharacterBody2D"]
script = ExtResource("1_n7tus")

[node name="Timers" type="Node" parent="."]

[node name="ResetHPTimer" type="Timer" parent="Timers"]
wait_time = 10.0

[node name="MovementRange" type="Node2D" parent="."]

[node name="IdleRange" type="Area2D" parent="MovementRange"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovementRange/IdleRange"]
position = Vector2(0, 25)
shape = SubResource("RectangleShape2D_8b82t")

[node name="CombatRange" type="Area2D" parent="MovementRange"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MovementRange/CombatRange"]
position = Vector2(0, 25)
shape = SubResource("RectangleShape2D_y1al6")

[node name="NormalCollision" type="CollisionShape2D" parent="."]
position = Vector2(35, 25)
shape = SubResource("RectangleShape2D_dfvyj")

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(35, 25)
shape = SubResource("RectangleShape2D_bl10x")

[node name="Attacks" type="Node2D" parent="."]

[node name="ExampleAttack" type="Area2D" parent="Attacks"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attacks/ExampleAttack"]
position = Vector2(45, 25)
shape = SubResource("RectangleShape2D_li7yr")

[node name="ColorRect" type="ColorRect" parent="Attacks/ExampleAttack"]
offset_left = 70.0
offset_right = 90.0
offset_bottom = 50.0
color = Color(0, 1, 1, 1)

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 70.0
offset_bottom = 50.0
color = Color(1, 0, 0, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_mbqbr")
animation = &"idle"
autoplay = "idle"

[connection signal="timeout" from="Timers/ResetHPTimer" to="." method="_on_reset_hp_timer_timeout"]
[connection signal="area_entered" from="MovementRange/IdleRange" to="." method="_on_idle_range_area_entered"]
[connection signal="area_exited" from="MovementRange/CombatRange" to="." method="_on_combat_range_area_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_hurtbox_area_exited"]
